--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,21 @@
-# Core Data Science
-pandas==2.0.3
-numpy==1.24.3
+# Core Data Processing
+pandas==2.1.4
+numpy==1.26.2
 
 # Machine Learning
-scikit-learn==1.3.0
-xgboost==2.0.0
-imbalanced-learn==0.11.0
+scikit-learn==1.3.2
+xgboost==2.0.3
 
-# Explainability
-shap==0.42.1
+# Interpretability
+shap==0.44.0
 
 # Visualization
-matplotlib==3.7.2
-seaborn==0.12.2
+matplotlib==3.8.2
+seaborn==0.13.0
 
 # Utilities
-joblib==1.3.2
-pyyaml==6.0.1
 tqdm==4.66.1
+joblib==1.3.2
 
-# Optional: Jupyter
-jupyter==1.0.0
-ipykernel==6.25.0
+# Logging
+python-dotenv==1.0.0
