ML model finalized 01

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ logs/
 config/secrets.yaml
 config/*.key
 config/*.json
+catboost_info/
+/catboost_info
 
 # ===============================
 # Experiment artifacts
